fix(resizable-container): resizer is behind overlays and modals
Closes #3650

--- a/client/src/app/resizable-container/ResizableContainer.less
+++ b/client/src/app/resizable-container/ResizableContainer.less
@@ -14,7 +14,7 @@
     position: absolute;
     background-color: transparent;
     user-select: none;
-    z-index: 100000;
+    z-index: 100;
   }
 
   .resizer .resizer-border {
